# src/index.ts
@@ -1,6 +1,6 @@
 import express, { Request, Response, NextFunction } from "express";
 import swaggerUi from "swagger-ui-express";
-import { ProductRoutes } from './routes';
+import { ProductRoutes, SubscriptionRoutes } from './routes';
 import swaggerDocument from "./documentation/swagger.json";
 
 const app = express();
@@ -19,8 +19,8 @@ const options = {
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument, options));
 
-
 app.use('/api/products', ProductRoutes);
+app.use('/api/subscription', SubscriptionRoutes);
 
 app.get('/', (req: Request, res: Response) => { res.send('Explore APIs') })
 app.listen(port, () => { console.log(`App listening at http://localhost:${port}`) })
